# Highway_Autonomous_Driving_Morai

./: README.md
control/: CMakeLists.txt  package.xml
control/include/: pid_control.h  pure_pursuit.h  velocity_planning.h
control/scripts/: pure_pursuit.py  pure_pursuit_pid.py  pure_pursuit_pid_velocity_planning.py
control/src/: pid_control.cpp  pure_pursuit.cpp  velocity_planning.cpp
detection/: package.xml
detection/src/: lane_bev.py
path_planning/: CMakeLists.txt  package.xml
path_planning/launch/: dijkstra_path_pub1.launch  dijkstra_path_pub2.launch
path_planning/src/: global_path_pub.py  lattice_planner.py
team3/: CMakeLists.txt  package.xml
team3/launch/: lattice_driving.launch
